deploy/k8s/infra/monitoring/prometheus-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-strip-prefix
  namespace: myapp
spec:
  stripPrefix:
    prefixes:
      - /prometheus
