deploy/k8s/infra/monitoring/statsd-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statsd-exporter
  namespace: myapp
  labels:
    app: statsd-exporter
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: statsd-exporter
  template:
    metadata:
      labels:
        app: statsd-exporter
    spec:
      nodeSelector:
        kubernetes.io/hostname: backend2
      containers:
        - name: statsd-exporter
          image: prom/statsd-exporter:v0.26.1
          ports:
            - containerPort: 9102
              name: metrics
            - containerPort: 9125
              name: statsd-udp
              protocol: UDP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9102
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9102
            initialDelaySeconds: 10
            periodSeconds: 10
