deploy/k8s/infra/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "250"
    traefik.ingress.kubernetes.io/router.middlewares: myapp-prometheus-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dev.example.com
      secretName: dev-myapp-io-tls
  rules:
    - host: dev.example.com
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
